# encryptionProgram

./: CMakeLists.txt
headers/: decryptCiphertext.h  desRounds.h  encryptPlaintext.h  errorHandling.h  fileFunctions.h  main.h  subkeyGenerator.h
src/: decryptCiphertext.c  desRounds.c  encryptPlaintext.c  errorHandling.c  fileFunctions.c  main.c  subkeyGenerator.c
tests/: CMakeLists.txt  decryptCiphertextTests.cpp  desRoundsTests.cpp  encryptPlainTest.cpp  errorHandlingTests.cpp  fileFunctionsTests.cpp  mainTests.cpp  mockMain.c  mockMain.h  subkeyGeneratorTests.cpp
tests/mockFiles/: decryptionTest  encryptedTestFile  encryptionTest
